# swarm_2d

./: .gitignore  README.md  swarm.rviz
swarm_interfaces/: CMakeLists.txt  package.xml
swarm_interfaces/action/: NavigationAction.action
swarm_interfaces/srv/: StopNavigation.srv
swarm_simulator/: CMakeLists.txt  package.xml
swarm_simulator/app/: experiment_recorder.cpp  final_coverage_recorder.cpp  main.cpp
swarm_simulator/core/: core  core.hpp  status.hpp
swarm_simulator/core/src/: core.cpp  core.hpp  state.hpp
swarm_simulator/param/: office_2_robot.yaml  office_4_robot.yaml  office_8_robot.yaml  warehouse_2_robot.yaml  warehouse_4_robot.yaml  warehouse_8_robot.yaml
swarm_simulator/param/experiment_recorder/: office_2_fast_disperse.yaml  office_2_greedy_check.yaml  office_2_shared_greedy.yaml  office_2_shared_utility.yaml  office_4_fast_disperse.yaml  office_4_greedy_check.yaml  office_4_shared_greedy.yaml  office_4_shared_utility.yaml  office_8_fast_disperse.yaml  office_8_greedy_check.yaml  office_8_shared_greedy.yaml  office_8_shared_utility.yaml  warehouse_2_fast_disperse.yaml  warehouse_2_greedy_check.yaml  warehouse_2_shared_greedy.yaml  warehouse_2_shared_utility.yaml
swarm_simulator/plugins/: plugins
swarm_simulator/plugins/navigation/: navigation.cpp  navigation.hpp  pathfinder.cpp  pathfinder.hpp
swarm_simulator/plugins/slam/: fieldofview.cpp  fieldofview.hpp
swarm_simulator/src/: main.cpp
swarm_simulator/test/: core_test_node.cpp  navigation_test_node.cpp
